--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: PanTaixi Personal Blog
-email: your-email@example.com
+email: 2330610648@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  PanTaixi Personal Blog on Computer Science
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://annnnnnnnnnie.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
